Add Jackson databind module when running dataset tests